test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_and.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(10.0)
  &
  -
  const int(1)
  ;
  return
  const int(0)
  ;
  }
